cmake_minimum_required(VERSION 3.2)

PROJECT(dmlibsigcpp)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()
ModuleSetWinCompilerFlags()

SET(DMLIBSIGCPP_VERSION_MAJOR "1")
SET(DMLIBSIGCPP_VERSION_MINOR "0")
SET(DMLIBSIGCPP_VERSION_PATCH "1")
SET(DMLIBSIGCPP_VERSION "${DMLIBSIGCPP_VERSION_MAJOR}.${DMLIBSIGCPP_VERSION_MINOR}.${DMLIBSIGCPP_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${DMLIBSIGCPP_VERSION}")

OPTION(USE_DMLIBSIGCPP "use dmlibsigcpp" OFF)
if (WIN32)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sigc++config.h.win.in ${CMAKE_CURRENT_SOURCE_DIR}/sigc++config.h)
else(UNIX)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/sigc++config.h.in ${CMAKE_CURRENT_SOURCE_DIR}/sigc++config.h)
endif(WIN32)


SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

LibImport("dmlibsigcpp" "sigc++")
ExeImport("test" "dmlibsigcpp")
